proper/css/stylesheet.css
body {
    background: #464453;
}

/*#stats {
    display: inline-block;
    vertical-align: top;
}*/

#southCanvas {
    display: inline-block;
    vertical-align: top;
    /*background: url(texture.jpg);*/
}

#eastCanvas {
    display: inline-block;
    vertical-align: top;
    /*background: url(texture.jpg);*/
    transform: rotate(90deg);
}

#northCanvas {
    display: inline-block;
    vertical-align: top;
    /*background: url(texture.jpg);*/
    transform: rotate(180deg);
}

#westCanvas {
    display: inline-block;
    vertical-align: top;
    /*background: url(texture.jpg);*/
    transform: rotate(270deg);
}

#menu {
    display: inline-block;
    vertical-align: top;
    position: relative;
}

#stats {
    position: absolute;
    bottom: 0em;
    right: 1em;
    visibility: hidden;
}

.divTable {
    display: table;
    margin: 0 auto;
}

.divTableRow {
    display: table-row;
}

.divTableHeading {
    background-color: #EEE;
    display: table-header-group;
}

.divTableCell, .divTableHead {
    border: 1px solid #999999;
    display: table-cell;
    padding: 3px 10px;
}

.divTableHeading {
    background-color: #EEE;
    display: table-header-group;
    font-weight: bold;
}

.divTableFoot {
    background-color: #EEE;
    display: table-footer-group;
    font-weight: bold;
}

.divTableBody {
    display: table-row-group;
}

